--- a/src/modules/pages/topic/style/categories.css
+++ b/src/modules/pages/topic/style/categories.css
@@ -1,62 +1,58 @@
-.group-categories-topic {
-    height: 370px;
-    background: #F3F3F3;
-    border-radius: 10px;
-    padding-left: 21px;
-    margin-left: 35px;
-}
-
 .title-categories-topic {
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 0px;
-    color: #1e221d;
-    margin-top: 16px;
-    margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0px;
 }
 
 .category-topic {
-    margin-top: 2px;
-    display: flex;
-    flex-wrap: wrap;
+  margin-top: 2px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .content-category-topic {
-    font-size: .7rem;
-    font-weight: 450;
-    color: #FFFFFF;
-    background: #818A91;
-    border: 1px solid #707070;
-    border-radius: 18px;
-    padding: 2px 5px 3px 5px;
-    margin-right: 5px;
-    margin-top: 5px;
-    text-decoration: none;
-    position: relative;
-    overflow: hidden;
-    z-index: 10;
+  font-size: 0.7rem;
+  font-weight: 450;
+  color: #ffffff;
+  background: #818a91;
+  border: 1px solid #707070;
+  border-radius: 18px;
+  padding: 2px 5px 3px 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+  z-index: 10;
 }
 
 .content-category-topic:before {
-    content: '';
-    background-color: rgba(207, 207, 207, 0.3);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateX(-100%);
-    z-index: -1;
+  content: '';
+  background-color: rgba(207, 207, 207, 0.3);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  z-index: -1;
 }
 
 .content-category-topic:hover:before {
-    transform: translateX(0%);
-    transition: all 0.5s;
+  transform: translateX(0%);
+  transition: all 0.5s;
 }
 
 .content-category-topic:hover {
-    text-decoration: none;
-    color: #218621;
+  text-decoration: none;
+  color: #218621;
+}
+
+.group-categories-topic {
+  padding: 15px;
+  min-height: 370px;
+  border-radius: 10px;
+  margin-left: 10px;
 }
