--- a/src/modules/pages/user-profile/style/my-post.css
+++ b/src/modules/pages/user-profile/style/my-post.css
@@ -71,7 +71,7 @@
 
 .title-rating-topics {
   font-size: 12px;
-  color: #013248;
+  color: #8e8e8e;
 }
 
 .infor-topics {
@@ -81,13 +81,12 @@
 .title-infor-topics {
   font-size: 18px;
   font-weight: 600;
-  color: #013248;
   margin-bottom: 3px;
 }
 
 .content-infor-topics {
   font-weight: 300;
-  color: rgb(109, 109, 109);
+  color: '#8e8e8e';
   margin-bottom: 15px;
   font-size: 1rem;
   line-height: 1.3rem;
